--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <title>Audio PONG</title>
     <script src="../audio-video-player/javascript/Tone.js"></script>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="http://www.davidbardschwarz.com/courses/apong-styles.css"/>
-
+    <link rel="stylesheet" href="http://www.davidbardschwarz.com/courses/pong-styles.css"/>
   </head>
 
   <body><center>
