--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>Audio PONG</title>
-    <script src="../audio-video-player/javascript/Tone.js"></script>
+    <script src="./Tone.js"></script>
+    <script src="pong-styles.css"/>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="http://www.davidbardschwarz.com/courses/pong-styles.css"/>
   </head>
 
   <body><center>
