Update and rename aindex.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>Audio PONG</title>
-    <script src="../audio-video-player/javascript/Tone.js"></script>
+    <script src="https://housercaspar.github.io/apple-eater/javascript/Tone.js"></script>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="http://www.davidbardschwarz.com/courses/apong-styles.css"/>
+    <link rel="stylesheet" href="https://housercaspar.github.io/apple-eater/pong-styles.css"/>
 
   </head>
 
