--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       DEBUG:<br/>
       <p id="debug"></p>
     </div>
-    <script type="module" src="../audio-video-player/javascript/apong-audio.js"></script>
-    <script type="module" src="../audio-video-player/javascript/apong-classes.js"></script>
-    <script type="module" src="../audio-video-player/javascript/apong-events.js"></script>
-    <script type="module" src="../audio-video-player/javascript/apong-util.js"></script>
-    <script type="module" src="../audio-video-player/javascript/apong-index.js"></script>
+    <script type="module" src="https://housercaspar.github.io/apple-eater/javascript/pong-audio.js"></script>
+    <script type="module" src="https://housercaspar.github.io/apple-eater/javascript/pong-classes.js"></script>
+    <script type="module" src="https://housercaspar.github.io/apple-eater/javascript/pong-events.js"></script>
+    <script type="module" src="https://housercaspar.github.io/apple-eater/javascript/pong-util.js"></script>
+    <script type="module" src="https://housercaspar.github.io/apple-eater/javascript/pong-index.js"></script>
 </center>  </body>
 </html>
