--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Audio PONG</title>
-    <script src="https://housercaspar.github.io/apple-eater/javascript/Tone.js"></script>
+    <script src="./javascript/Tone.js"></script>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://housercaspar.github.io/apple-eater/pong-styles.css"/>
 
